--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <p>Email: Cheezymechanic08@gmail.com</p>
             <p>Phone: 270-579-7689</p>
             <p>Follow us on social media</p>
+            <a href="https://cheezymrp.netlify.app/">Visit CheezyMrP's Website</a>
+
         </section>
     </div>
     
